Prevent user selection of invisible explainer text.

--- a/source/setup/Setup.module.css
+++ b/source/setup/Setup.module.css
@@ -128,6 +128,8 @@
   font-size: 1.25rem;
   color: transparent;
 
+  user-select: none;
+
   transition: color 0.25s var(--curve);
 }
 
